视图注入(apt版)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".viewinject.InjectTestReflectActivity" />
+        <activity android:name=".viewinject.InjectTestAptActivity" />
     </application>
 
 </manifest>
