--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation project(':viewinject-reflect')
     implementation project(':viewinject-apt')
     annotationProcessor project(':viewinject-compiler')
+//    implementation project(':jetpack-paging')
 }
