--- a/jetpack-paging/build.gradle
+++ b/jetpack-paging/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     implementation ("android.arch.paging:runtime:$paging_version")
     testImplementation "android.arch.paging:common:$paging_version"
